--- a/LogStudio/Form1.resx
+++ b/LogStudio/Form1.resx
@@ -123,7 +123,10 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="splitContainer1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 55</value>
+    <value>0, 59</value>
+  </data>
+  <data name="splitContainer1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <metadata name="m_ItemTree.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -134,8 +137,11 @@
   <data name="m_ItemTree.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
+  <data name="m_ItemTree.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>5, 5, 5, 5</value>
+  </data>
   <data name="m_ItemTree.Size" type="System.Drawing.Size, System.Drawing">
-    <value>265, 515</value>
+    <value>353, 644</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_ItemTree.TabIndex" type="System.Int32, mscorlib">
@@ -145,7 +151,7 @@
     <value>m_ItemTree</value>
   </data>
   <data name="&gt;&gt;m_ItemTree.Type" xml:space="preserve">
-    <value>LogStudio.ItemsTreeView, LogStudio, Version=5.0.8.587, Culture=neutral, PublicKeyToken=null</value>
+    <value>LogStudio.ItemsTreeView, LogStudio, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;m_ItemTree.Parent" xml:space="preserve">
     <value>splitContainer1.Panel1</value>
@@ -179,7 +185,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACa
-        DgAAAk1TRnQBSQFMAgEBAwEAAaQBAQGkAQEBEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        DgAAAk1TRnQBSQFMAgEBAwEAAbwBAQG8AQEBEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABEAMAAQEBAAEYBgABDBIAAWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2
         AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2AWQBSgE2NgAByAHDAbgBnAGXAYUBjAGK
         AXYBfwGDAnABegFpAWYBdAFiAV8BbgFcAVoBaQFZAVMBYQFRAUYBVwFGATsBTAE8ATYBRAE3ATABQAEz
@@ -247,8 +253,11 @@
   <data name="m_ModuleTabControl.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
+  <data name="m_ModuleTabControl.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
   <data name="m_ModuleTabControl.Size" type="System.Drawing.Size, System.Drawing">
-    <value>734, 515</value>
+    <value>979, 644</value>
   </data>
   <data name="m_ModuleTabControl.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -278,10 +287,13 @@
     <value>1</value>
   </data>
   <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1003, 515</value>
+    <value>1337, 644</value>
   </data>
   <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
-    <value>265</value>
+    <value>353</value>
+  </data>
+  <data name="splitContainer1.SplitterWidth" type="System.Int32, mscorlib">
+    <value>5</value>
   </data>
   <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -308,7 +320,7 @@
     <value>Magenta</value>
   </data>
   <data name="m_OpenButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>26, 28</value>
+    <value>29, 28</value>
   </data>
   <data name="m_OpenButton.ToolTipText" xml:space="preserve">
     <value>Open log file...</value>
@@ -323,7 +335,7 @@
     <value>Black</value>
   </data>
   <data name="m_PrintButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>28, 28</value>
+    <value>29, 28</value>
   </data>
   <data name="m_PrintButton.Text" xml:space="preserve">
     <value>toolStripButton3</value>
@@ -341,7 +353,7 @@
     <value>Black</value>
   </data>
   <data name="m_PrintPreview.Size" type="System.Drawing.Size, System.Drawing">
-    <value>27, 28</value>
+    <value>29, 28</value>
   </data>
   <data name="m_PrintPreview.Text" xml:space="preserve">
     <value>toolStripButton3</value>
@@ -353,19 +365,19 @@
     <value>6, 31</value>
   </data>
   <data name="m_ModuleLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>35, 28</value>
+    <value>45, 28</value>
   </data>
   <data name="m_ModuleLabel.Text" xml:space="preserve">
     <value>Label</value>
   </data>
   <data name="m_FileMenuStrip.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 24</value>
+    <value>0, 28</value>
   </data>
   <data name="m_FileMenuStrip.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>5, 0, 1, 0</value>
+    <value>7, 0, 1, 0</value>
   </data>
   <data name="m_FileMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1003, 31</value>
+    <value>1337, 31</value>
   </data>
   <data name="m_FileMenuStrip.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -395,25 +407,25 @@
     <value>Ctrl+O</value>
   </data>
   <data name="m_OpenMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_OpenMenu.Text" xml:space="preserve">
     <value>&amp;Open...</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 6</value>
+    <value>191, 6</value>
   </data>
   <data name="m_Close.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+W</value>
   </data>
   <data name="m_Close.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_Close.Text" xml:space="preserve">
     <value>Close</value>
   </data>
   <data name="toolStripSeparator6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 6</value>
+    <value>191, 6</value>
   </data>
   <data name="m_PageSetup.ImageScaling" type="System.Windows.Forms.ToolStripItemImageScaling, System.Windows.Forms">
     <value>None</value>
@@ -422,7 +434,7 @@
     <value>Fuchsia</value>
   </data>
   <data name="m_PageSetup.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_PageSetup.Text" xml:space="preserve">
     <value>Page Set&amp;up...</value>
@@ -431,7 +443,7 @@
     <value>None</value>
   </data>
   <data name="m_PrintPreviewMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_PrintPreviewMenu.Text" xml:space="preserve">
     <value>Print Pre&amp;view...</value>
@@ -446,31 +458,31 @@
     <value>Ctrl+P</value>
   </data>
   <data name="m_PrintMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_PrintMenu.Text" xml:space="preserve">
     <value>&amp;Print...</value>
   </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 6</value>
+    <value>191, 6</value>
   </data>
   <data name="m_RecentFileHistory.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="m_RecentFileHistory.Text" xml:space="preserve">
     <value>Recent Files</value>
   </data>
   <data name="toolStripSeparator5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 6</value>
+    <value>191, 6</value>
   </data>
   <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 30</value>
+    <value>194, 30</value>
   </data>
   <data name="exitToolStripMenuItem.Text" xml:space="preserve">
     <value>E&amp;xit...</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>37, 20</value>
+    <value>46, 24</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;File</value>
@@ -482,7 +494,7 @@
     <value>Fuchsia</value>
   </data>
   <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 30</value>
+    <value>246, 30</value>
   </data>
   <data name="toolStripMenuItem1.Text" xml:space="preserve">
     <value>&amp;New</value>
@@ -491,7 +503,7 @@
     <value>None</value>
   </data>
   <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 30</value>
+    <value>246, 30</value>
   </data>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;Open...</value>
@@ -506,7 +518,7 @@
     <value>Ctrl+S</value>
   </data>
   <data name="m_SettingsSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 30</value>
+    <value>246, 30</value>
   </data>
   <data name="m_SettingsSave.Text" xml:space="preserve">
     <value>&amp;Save</value>
@@ -518,25 +530,25 @@
     <value>Ctrl+Shift+S</value>
   </data>
   <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>203, 30</value>
+    <value>246, 30</value>
   </data>
   <data name="toolStripMenuItem3.Text" xml:space="preserve">
     <value>Save &amp;As...</value>
   </data>
   <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 20</value>
+    <value>76, 24</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;Settings</value>
   </data>
   <data name="m_Statistics.Size" type="System.Drawing.Size, System.Drawing">
-    <value>161, 22</value>
+    <value>200, 26</value>
   </data>
   <data name="m_Statistics.Text" xml:space="preserve">
     <value>Statistics...</value>
   </data>
   <data name="compareLogFileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>284, 22</value>
+    <value>352, 26</value>
   </data>
   <data name="compareLogFileToolStripMenuItem.Text" xml:space="preserve">
     <value>Compare log file...</value>
@@ -545,43 +557,49 @@
     <value>False</value>
   </data>
   <data name="beamCurrentCompensationToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>284, 22</value>
+    <value>352, 26</value>
   </data>
   <data name="beamCurrentCompensationToolStripMenuItem.Text" xml:space="preserve">
     <value>Beam current feedback compensation...</value>
   </data>
+  <data name="correlationToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>352, 26</value>
+  </data>
+  <data name="correlationToolStripMenuItem.Text" xml:space="preserve">
+    <value>Correlation</value>
+  </data>
   <data name="troubleshootingToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>161, 22</value>
+    <value>200, 26</value>
   </data>
   <data name="troubleshootingToolStripMenuItem.Text" xml:space="preserve">
     <value>Troubleshooting</value>
   </data>
   <data name="m_ToolsMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>47, 20</value>
+    <value>58, 24</value>
   </data>
   <data name="m_ToolsMenu.Text" xml:space="preserve">
     <value>&amp;Tools</value>
   </data>
   <data name="m_FilterEditor.Size" type="System.Drawing.Size, System.Drawing">
-    <value>132, 22</value>
+    <value>164, 26</value>
   </data>
   <data name="m_FilterEditor.Text" xml:space="preserve">
     <value>Edit &amp;Filter...</value>
   </data>
   <data name="m_Admin.Size" type="System.Drawing.Size, System.Drawing">
-    <value>55, 20</value>
+    <value>67, 24</value>
   </data>
   <data name="m_Admin.Text" xml:space="preserve">
     <value>&amp;Admin</value>
   </data>
   <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>142, 26</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;About...</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 20</value>
+    <value>55, 24</value>
   </data>
   <data name="helpToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;Help</value>
@@ -590,7 +608,7 @@
     <value>0, 0</value>
   </data>
   <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1003, 24</value>
+    <value>1337, 28</value>
   </data>
   <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -617,16 +635,16 @@
     <value>True</value>
   </metadata>
   <data name="m_Progress.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 16</value>
+    <value>133, 18</value>
   </data>
   <data name="m_Task.Size" type="System.Drawing.Size, System.Drawing">
-    <value>118, 17</value>
+    <value>151, 20</value>
   </data>
   <data name="m_Task.Text" xml:space="preserve">
     <value>toolStripStatusLabel1</value>
   </data>
   <data name="m_Modified.Size" type="System.Drawing.Size, System.Drawing">
-    <value>768, 17</value>
+    <value>1031, 20</value>
   </data>
   <data name="m_Modified.Text" xml:space="preserve">
     <value>toolStripStatusLabel1</value>
@@ -635,7 +653,7 @@
     <value>MiddleRight</value>
   </data>
   <data name="m_UpdatingLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 17</value>
+    <value>74, 20</value>
   </data>
   <data name="m_UpdatingLabel.Text" xml:space="preserve">
     <value>Updating:</value>
@@ -644,16 +662,19 @@
     <value>False</value>
   </data>
   <data name="m_UpdatingProgress.Size" type="System.Drawing.Size, System.Drawing">
-    <value>50, 16</value>
+    <value>67, 18</value>
   </data>
   <data name="m_UpdatingProgress.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="m_StatusStrip.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 570</value>
+    <value>0, 703</value>
+  </data>
+  <data name="m_StatusStrip.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>1, 0, 19, 0</value>
   </data>
   <data name="m_StatusStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1003, 22</value>
+    <value>1337, 26</value>
   </data>
   <data name="m_StatusStrip.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -916,10 +937,10 @@
     <value>87</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
+    <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1003, 592</value>
+    <value>1337, 729</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2650,6 +2671,9 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 </value>
   </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Log Studio</value>
   </data>
@@ -2819,6 +2843,12 @@
     <value>beamCurrentCompensationToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;beamCurrentCompensationToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;correlationToolStripMenuItem.Name" xml:space="preserve">
+    <value>correlationToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;correlationToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;m_Admin.Name" xml:space="preserve">
